# fastapi_postgres_docker

./: .dockerignore  .env  .env.test  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  test.db  test_tables.db
app/: config.py  database.py  main.py  models.py  schemas.py
app/routes/: todos.py  users.py
tests/: conftest.py  test_database.py  test_models.py  test_schemas.py
tests/test_routes/: test_todos.py  test_users.py
